courses card alignment fixes

--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ body {
   }
 
   .courses {
-    padding: 80px 20px;
+    padding: 80px 50px;
     background-color: #fff;
   }
 
